--- a/src/main/java/org/example/application5.html
+++ b/src/main/java/org/example/application5.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Application</title>
 </head>
 <body>
-$END$
+        1 - ARIZA TURI (2kunga javob olish, ma'lumotnoma olish, )
+
+        2 - KIM TOMONIDAN YULLANAYOTKANI ()
+
+        3 - SABABI, BATAFSIL
+
+        4 - FILE YUKLAYDI (xohlasa yuklaydi xohlamasa yuq)
+
+        4 - TASDIQLAYDIGAN SHAXSLAR
+                    1 , 2, 3, 4, VA HOKAZO SHAXSLAR
+        1CHI ARIZAGA MASQUL SHAXS PALONCHAYEV P. TASDIQLADI
+        2CHI ARIZAGA MASQUL SHAXS KALONCHAYEV K. TASDIQLADI
+
+        3CHI ARIZAGA MASQUL SHAXS KALONCHAYEV K. RAD ETDI
+        RAD ETILGANI SABABI
+
+        5 - qr code
+
+
+        api 1 -->  create application -> Status = CREATED
+        api 2 -->  send application -> Status = SENDED
+        api 3 -->  send application -> if Status = APPROVED -> download pdf by application id
+
 </body>
 </html>
