--- a/src/main/java/org/example/application2.html
+++ b/src/main/java/org/example/application2.html
@@ -1,10 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Application</title>
+    <style>
+        body {
+            font-size: 16px;
+            margin: 0;
+        }
+
+        html {
+            margin: 0;
+        }
+
+        html {
+            box-sizing: border-box;
+            height: 100%;
+            scroll-behavior: smooth;
+        }
+
+        *,
+        *::after,
+        *::before {
+            box-sizing: inherit;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: "Roboto";
+        }
+
+        ul,
+        li {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p {
+            margin: 0;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        button {
+            padding: 0;
+            border: none;
+            background: transparent;
+            cursor: pointer;
+        }
+
+        .container {
+            max-width: 1192px;
+            width: 50%;
+            padding-left: 16px;
+            padding-right: 16px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .privacyPolicy {
+            margin-top: 50px;
+        }
+
+        .paging {
+            font-size: 20px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .page {
+            padding: 50px;
+            margin: 10px;
+            margin-bottom: 20px;
+            /* box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px; */
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="privacyPolicy">
+
+    <div class="container">
+
+        <div class="paging">
+
+            <div class="page">
+                <b>OMMAVIY OFERTA</b>
+                <br>
+                <b>(O’zbekiston Respublikasi Fuqorolik to’g’risidagi Kodeksning 369-moddasiga ko’ra ushbu ommaviy oferta
+                    yuridik shartnoma bilan tenghuquqqa ega bo’lib, “IT-MAKER” MCHJ “100k.uz” Saytining
+                    huquqiyjihatlarini o’z ichiga oladi)</b>
+                <br>
+                <br>
+                <br>
+                <b>Atama va tavsiflar</b>
+                <p>OMMAVIY OFERTA(O’zbekiston Respublikasi Fuqorolik to’g’risidagi Kodeksning 369-moddasiga ko’ra ushbu
+                    ommaviy oferta yuridik shartnoma bilan tenghuquqqa ega bo’lib, “IT-MAKER” MCHJ “100k.uz” Saytining
+                    huquqiyjihatlarini o’z ichiga oladi)Atama va tavsiflarAxborot vositasi: (Sayt) Faqat internet tizimi
+                    bajarib,Sotuvchi va Xaridor o’rtasida elektron reklamaaylanmasini amalgaoshiruvchi O’zbekiston
+                    Respublikasida davlat ro’yhatidan o’tgan yuridik shaxsyoki O’zbekiston Respublikasida doimiy
+                    yashovchi va daromadidan soliqto’lanishi belgilangan jismoniy shaxs;Sotuvchi: Xaridorlar
+                    buyurtmasiga binoan tovarni“www.100k.uz” Vositachiinternet platformasi orqali masofadan turib
+                    sotuvchi hamda tovarni kelgusidaXaridorga yuboruvchi yuridik yoki jismoniy shaxs;Xaridor (Mijoz):
+                    O’zbekiston Respublikasida davlat ro’yhatidan o’gan yuridikshaxs yoki O’zbekiston Respublikasida
+                    doimiy yashovchi, muomalagalayoqatli 18 yoshga to’lgan jismoniy shaxs;Ofertа: Sotuvchining ma’lum
+                    shaxslar doirasiga qarata tovarlarni masofadanturib(distantsion) xarid qilish to’risidagichakana
+                    savdo shartnomasini(kelgusida - Shartnoma) tuzish haqidagi ommaviy taklifi. Bunda Shartnomamazkur
+                    hujjatdagi va Sotuvchining saytidagi shartlari hamda internet-do’kon(www.100k.uz) shartlari asosida
+                    tuziladi;Aksept: Xaridor tomonidan mazkur Ofertaning </p>
+            </div>
+
+            <!--            <div class="page">-->
+            <!--                <b>OMMAVIY OFERTA</b>-->
+            <!--                <br>-->
+            <!--                <b>(O’zbekiston Respublikasi Fuqorolik to’g’risidagi Kodeksning 369-moddasiga ko’ra ushbu ommaviy oferta yuridik shartnoma bilan tenghuquqqa ega bo’lib, “IT-MAKER” MCHJ “100k.uz” Saytining huquqiyjihatlarini o’z ichiga oladi)</b>-->
+            <!--                <br>-->
+            <!--                <br>-->
+            <!--                <br>-->
+            <!--                <b>Atama va tavsiflar</b>-->
+            <!--                <p>OMMAVIY OFERTA(O’zbekiston Respublikasi Fuqorolik to’g’risidagi Kodeksning 369-moddasiga ko’ra ushbu ommaviy oferta yuridik shartnoma bilan tenghuquqqa ega bo’lib, “IT-MAKER” MCHJ “100k.uz” Saytining huquqiyjihatlarini o’z ichiga oladi)Atama va tavsiflarAxborot vositasi: (Sayt) Faqat internet tizimi orqali savdo-hizmat ko’rsatishfaoliyati bilan shug’ullanuvchi“www.100k.uz” sayti;Axborot vositachisi: (Admin) Ijtimoiy tarmoqlar orqali o’ziga tegishli gruppa vayoki kanallarda e’lon berish huqiqiga ega bo’lgan jismoniy yoki yuridik shaxs;Axborot vositachisi sanalgan, hamda Saytning vakili vazifasini bajarib,Sotuvchi va Xaridor o’rtasida elektron reklamaaylanmasini amalgaoshiruvchi O’zbekiston Respublikasida davlat ro’yhatidan o’tgan yuridik shaxsyoki O’zbekiston Respublikasida doimiy yashovchi va daromadidan soliqto’lanishi belgilangan jismoniy shaxs;Sotuvchi: Xaridorlar buyurtmasiga binoan tovarni“www.100k.uz” Vositachiinternet platformasi orqali masofadan turib sotuvchi hamda tovarni kelgusidaXaridorga yuboruvchi yuridik yoki jismoniy shaxs;Xaridor (Mijoz): O’zbekiston Respublikasida davlat ro’yhatidan o’gan yuridikshaxs yoki O’zbekiston Respublikasida doimiy yashovchi, muomalagalayoqatli 18 yoshga to’lgan jismoniy shaxs;Ofertа: Sotuvchining ma’lum shaxslar doirasiga qarata tovarlarni masofadanturib(distantsion) xarid qilish to’risidagichakana savdo shartnomasini(kelgusida - Shartnoma) tuzish haqidagi ommaviy taklifi. Bunda Shartnomamazkur hujjatdagi va Sotuvchining saytidagi shartlari hamda internet-do’kon(www.100k.uz) shartlari asosida tuziladi;Aksept: Xaridor tomonidan mazkur Ofertaning (Shartnoma) shartlariga to’liqva so’zsiz rozi ekanligi va qabul qilishi;Masofadan turib(distantsion) xarid qilish to’g’risidagichakana savdo shartnomasi:(kelgusida Shartnoma) Xaridor Sotuvchitomonidan taklif qilingan, Internet-do’konlarda sotiladigan Tovar tavsifi bilantanishib chiqqanidan so’ng tuziladigan, hamda Xaridor tomonidan to’gridan-to’gri ushbu Tovar bilan tanishib chiqish imkonini bermaydiganchakana savdo shartnomasi.Shartnoma tomonlari: Axborot vositasi (Sayt) /Axborot vositachisi(Admin) /Sotuvchi /Xaridor.Buyurtma - Xaridor tomonidan tanlangan Tovar, uning narxi, yetkazib berishmanzili, Xaridorning ismi-sharifi yoki nomi, uning kontakt aloqa raqamlari vamazkur hujjat bilan belgilangan shakldagi boshqa ma’lumotlarni o’zidamujassamlantirgan elektron hujjat.Tovar(tovarlar) Internet do’konlar tomonidan sotuvga qo’yiladigan vaXaridorning buyurtmasiga binoan Sotuvchi tomonidan masofadan turib(distantsion) sotib olinadigan va Xaridorga jo’natiladigan tovarlar</p>-->
+            <!--            </div>-->
+        </div>
+    </div>
 </body>
+</html></title>
 </html>
